--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "react-typescript",
   "version": "2021.0.1",
+  "private": true,
   "scripts": {
-    "start": "webpack serve --config webpack.dev.config.ts"
+    "start": "webpack serve --config webpack.dev.config.ts",
+    "format": "prettier --write \"src/**/*.{ts,tsx}\"",
+    "lint": "eslint \"src/**/*.{ts,tsx}\"",
+    "lint:fix": "eslint --fix \"src/**/*.{ts,tsx}\""
   },
   "dependencies": {
     "react": "^17.0.2",
@@ -31,11 +35,18 @@
     "eslint-webpack-plugin": "^2.5.3",
     "fork-ts-checker-webpack-plugin": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
+    "husky": "^5.2.0",
+    "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3",
     "webpack": "^5.28.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "lint-staged": {
+    "*.tsx": [
+      "yarn lint:fix"
+    ]
   }
 }
