--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "webpack serve --config webpack.dev.config.ts",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "lint": "eslint \"src/**/*.{ts,tsx}\"",
-    "lint:fix": "eslint --fix \"src/**/*.{ts,tsx}\""
+    "lint:fix": "eslint --fix \"src/**/*.{ts,tsx}\"",
+    "prepare": "husky install"
   },
   "dependencies": {
     "react": "^17.0.2",
